@@ -42,6 +42,18 @@ BUTTLOADTAG(BuildTime,   __TIME__);
 BUTTLOADTAG(BuildDate,   __DATE__);
 BUTTLOADTAG(LUFAVersion, "LUFA V" LUFA_VERSION_STRING);
 
+/* Scheduler Task List */
+TASK_LIST
+{
+	#if !defined(INTERRUPT_CONTROL_ENDPOINT)
+	{ Task: USB_USBTask          , TaskStatus: TASK_STOP },
+	#endif
+	
+	#if !defined(INTERRUPT_DATA_ENDPOINT)
+	{ Task: USB_HID_Report       , TaskStatus: TASK_STOP },
+	#endif
+};
+
 /** Static buffer to hold the last received report from the host, so that it can be echoed back in the next sent report */
 static uint8_t LastReceived[GENERIC_REPORT_SIZE];
 
@@ -61,11 +73,14 @@ int main(void)
 	/* Indicate USB not ready */
 	UpdateStatus(Status_USBNotReady);
 
+	/* Initialize Scheduler so that it can be used */
+	Scheduler_Init();
+
 	/* Initialize USB Subsystem */
 	USB_Init();
-
-	/* >> APPLICATION INIT CODE HERE << */
-	for (;;);
+	
+	/* Scheduling - routine never returns, so put this last in the main function */
+	Scheduler_Start();
 }
 
 /** Event handler for the USB_Reset event. This fires when the USB interface is reset by the USB host, before the
@@ -74,11 +89,13 @@ int main(void)
  */
 EVENT_HANDLER(USB_Reset)
 {
+	#if defined(INTERRUPT_CONTROL_ENDPOINT)
 	/* Select the control endpoint */
 	Endpoint_SelectEndpoint(ENDPOINT_CONTROLEP);
 
 	/* Enable the endpoint SETUP interrupt ISR for the control endpoint */
 	USB_INT_Enable(ENDPOINT_INT_SETUP);
+	#endif
 }
 
 /** Event handler for the USB_Connect event. This indicates that the device is enumerating via the status LEDs and
@@ -109,16 +126,20 @@ EVENT_HANDLER(USB_ConfigurationChanged)
 		                       ENDPOINT_DIR_IN, GENERIC_EPSIZE,
 	                           ENDPOINT_BANK_SINGLE);
 
+	#if defined(INTERRUPT_DATA_ENDPOINT)
 	/* Enable the endpoint IN interrupt ISR for the report endpoint */
 	USB_INT_Enable(ENDPOINT_INT_IN);
+	#endif
 
 	/* Setup Generic OUT Report Endpoint */
 	Endpoint_ConfigureEndpoint(GENERIC_OUT_EPNUM, EP_TYPE_INTERRUPT,
 		                       ENDPOINT_DIR_OUT, GENERIC_EPSIZE,
 	                           ENDPOINT_BANK_SINGLE);
 
+	#if defined(INTERRUPT_DATA_ENDPOINT)
 	/* Enable the endpoint OUT interrupt ISR for the report endpoint */
 	USB_INT_Enable(ENDPOINT_INT_OUT);
+	#endif
 
 	/* Indicate USB connected and ready */
 	UpdateStatus(Status_USBReady);
@@ -237,6 +258,49 @@ void CreateGenericHIDReport(uint8_t* DataArray)
 	  DataArray[i] = LastReceived[i];
 }
 
+#if !defined(INTERRUPT_DATA_ENDPOINT)
+TASK(USB_HID_Report)
+{
+	/* Check if the USB system is connected to a host */
+	if (USB_IsConnected)
+	{
+		Endpoint_SelectEndpoint(GENERIC_OUT_EPNUM);
+		
+		if (Endpoint_ReadWriteAllowed())
+		{
+			/* Create a tempoary buffer to hold the read in report from the host */
+			uint8_t GenericData[GENERIC_REPORT_SIZE];
+			
+			/* Read Generic Report Data */
+			Endpoint_Read_Stream_LE(&GenericData, sizeof(GenericData));
+			
+			/* Process Generic Report Data */
+			ProcessGenericHIDReport(GenericData);
+
+			/* Finalize the stream transfer to send the last packet */
+			Endpoint_ClearCurrentBank();
+		}	
+
+		Endpoint_SelectEndpoint(GENERIC_IN_EPNUM);
+		
+		if (Endpoint_ReadWriteAllowed())
+		{
+			/* Create a tempoary buffer to hold the report to send to the host */
+			uint8_t GenericData[GENERIC_REPORT_SIZE];
+			
+			/* Create Generic Report Data */
+			CreateGenericHIDReport(GenericData);
+
+			/* Write Generic Report Data */
+			Endpoint_Write_Stream_LE(&GenericData, sizeof(GenericData));
+
+			/* Finalize the stream transfer to send the last packet */
+			Endpoint_ClearCurrentBank();
+		}
+	}
+}
+#endif
+
 /** ISR for the general Pipe/Endpoint interrupt vector. This ISR fires when an endpoint's status changes (such as
  *  a packet has been received) on an endpoint with its corresponding ISR enabling bits set. This is used to send
  *  HID packets to the host each time the HID interrupt endpoints polling period elapses, as managed by the USB
@@ -247,6 +311,7 @@ ISR(ENDPOINT_PIPE_vect, ISR_BLOCK)
 	/* Save previously selected endpoint before selecting a new endpoint */
 	uint8_t PrevSelectedEndpoint = Endpoint_GetCurrentEndpoint();
 
+	#if defined(INTERRUPT_CONTROL_ENDPOINT)
 	/* Check if the control endpoint has received a request */
 	if (Endpoint_HasEndpointInterrupted(ENDPOINT_CONTROLEP))
 	{
@@ -259,7 +324,9 @@ ISR(ENDPOINT_PIPE_vect, ISR_BLOCK)
 		/* Handshake the endpoint setup interrupt - must be after the call to USB_USBTask() */
 		USB_INT_Clear(ENDPOINT_INT_SETUP);
 	}
+	#endif
 
+	#if defined(INTERRUPT_DATA_ENDPOINT)
 	/* Check if Generic IN endpoint has interrupted */
 	if (Endpoint_HasEndpointInterrupted(GENERIC_IN_EPNUM))
 	{
@@ -272,7 +339,7 @@ ISR(ENDPOINT_PIPE_vect, ISR_BLOCK)
 		/* Clear the Generic IN Report endpoint interrupt and select the endpoint */
 		Endpoint_ClearEndpointInterrupt(GENERIC_IN_EPNUM);
 
-		/* Create a tempoary buffer to hold the report to send to the host */
+		/* Create a temporary buffer to hold the report to send to the host */
 		uint8_t GenericData[GENERIC_REPORT_SIZE];
 		
 		/* Create Generic Report Data */
@@ -297,7 +364,7 @@ ISR(ENDPOINT_PIPE_vect, ISR_BLOCK)
 		/* Clear the Generic OUT Report endpoint interrupt and select the endpoint */
 		Endpoint_ClearEndpointInterrupt(GENERIC_OUT_EPNUM);
 
-		/* Create a tempoary buffer to hold the read in report from the host */
+		/* Create a temporary buffer to hold the read in report from the host */
 		uint8_t GenericData[GENERIC_REPORT_SIZE];
 		
 		/* Read Generic Report Data */
@@ -309,6 +376,7 @@ ISR(ENDPOINT_PIPE_vect, ISR_BLOCK)
 		/* Finalize the stream transfer to send the last packet */
 		Endpoint_ClearCurrentBank();
 	}
+	#endif
 
 	/* Restore previously selected endpoint */
 	Endpoint_SelectEndpoint(PrevSelectedEndpoint);
