@@ -60,5 +60,19 @@
  *    <td>This token defines the size of the device reports, both sent and received. The value must be an
  *        integer ranging from 1 to 255.</td>
  *   </tr>
+ *   <tr>
+ *    <td>INTERRUPT_CONTROL_ENDPOINT</td>
+ *    <td>Makefile CDEFS</td>
+ *    <td>When defined, this causes the demo to enable interrupts for the control endpoint,
+ *        which services control requests from the host. If not defined, the control endpoint
+ *        is serviced via polling using the task scheduler.</td>
+ *   </tr>
+ *   <tr>
+ *    <td>INTERRUPT_DATA_ENDPOINT</td>
+ *    <td>Makefile CDEFS</td>
+ *    <td>When defined, this causes the demo to enable interrupts for the data endpoints,
+ *        which services incomming LED reports and outgoing key status reports to and from the host.
+ *        If not defined, the data endpoints are serviced via polling using the task scheduler.</td>
+ *   </tr>
  *  </table>
  */
