@@ -346,6 +346,9 @@ TASK(USB_Mouse_Host)
  */
 ISR(ENDPOINT_PIPE_vect, ISR_BLOCK)
 {
+	/* Save previously selected pipe before selecting a new pipe */
+	uint8_t PrevSelectedPipe = Pipe_GetCurrentPipe();
+
 	/* Check to see if the mouse data pipe has caused the interrupt */
 	if (Pipe_HasPipeInterrupted(MOUSE_DATAPIPE))
 	{
@@ -363,5 +366,8 @@ ISR(ENDPOINT_PIPE_vect, ISR_BLOCK)
 			ReadNextReport();
 		}
 	}
+
+	/* Restore previously selected pipe */
+	Pipe_SelectPipe(PrevSelectedPipe);
 }
 #endif
